--- a/fashe-colorlib/user-panel.html
+++ b/fashe-colorlib/user-panel.html
@@ -52,6 +52,7 @@
 							</a>
 						</li>
 					</ul>
+					<button>ALL HAIL OUR LORD AND SAVIOUR GIT</button>
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-8 col-lg-9 p-b-50">
