Added index in tr tag

--- a/fashe-colorlib/cart.html
+++ b/fashe-colorlib/cart.html
@@ -23,7 +23,7 @@
 						</tr>
 
 						{foreach item=product from=$products}
-						<tr class="table-row">
+						<tr class="table-row" id = "{$product[5]}">
 							<td class="column-1">
 								<div class="cart-img-product b-rad-4 o-f-hidden">
 									<img src="{$product[2]}" alt="IMG-PRODUCT">
