--- a/fashe-colorlib/checkOut.html
+++ b/fashe-colorlib/checkOut.html
@@ -57,18 +57,18 @@
 								</div>
 							</div>
 						</div>
-
-						<div class="card w-30 text-center">
-							<div class="card-body">
-								<input type="submit" class="btn" name="confirm" value="Confirm order"></input>
-							</div>
-						</div>
 					</form>
 				</div>
 				
 				<div class="col-4">
+					<div class="bo9 w-size18 p-l-40 p-r-40 p-t-30 p-b-38 m-t-30 m-r-0 m-l-auto p-lr-15-sm">
+						<h5 class="m-text20 p-b-24">Order Total</h5>
+						<div class="flex-w flex-sb-m p-t-26 p-b-30">
+							<span class="m-text22 w-size19 w-full-sm">Total:</span>
+							<span class="m-text21 w-size20 w-full-sm">€ jquery</span>
+						</div>
+					</div>
 				</div>
-
 			</div>
 		</div>
 	</section>
