Change product detail

--- a/fashe-colorlib/checkOut.html
+++ b/fashe-colorlib/checkOut.html
@@ -57,6 +57,9 @@
 								</div>
 							</div>
 						</div>
+						<div class="card-body text-center">
+							<input type="button" class="btn" value="Confirm Order">
+						</div>
 					</form>
 				</div>
 				
