--- a/fashe-colorlib/cart.html
+++ b/fashe-colorlib/cart.html
@@ -30,9 +30,9 @@
 								</div>
 							</td>
 							<td class="column-2">
-								<a href="product-detail.php?product={$product[0]}">{$product[0]}<br>
+								<a id="{$product[0]}">{$product[0]}<br>
 								</a>
-								<a href="cart.php?delete={$product[0]}">
+								<a id="{$product[0]}">
 								<span class="s-text8">delete</span>
 								</a>
 							</td>
