--- a/fashe-colorlib/index.html
+++ b/fashe-colorlib/index.html
@@ -76,7 +76,7 @@
 
 						<div class="block1-wrapbtn w-size2">
 							<!-- Button -->
-							<a href="http://localhost/shop.php?catalogue=protective gears" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
+							<a href="shop.php?catalogue=protective gears" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
 								Protective Gear
 							</a>
 						</div>
@@ -90,7 +90,7 @@
 
 						<div class="block1-wrapbtn w-size2">
 							<!-- Button -->
-							<a href="http://localhost/shop.php?catalogue=swords" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
+							<a href="shop.php?catalogue=swords" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
 								Swords
 							</a>
 						</div>
@@ -104,7 +104,7 @@
 
 						<div class="block1-wrapbtn w-size2">
 							<!-- Button -->
-							<a href="http://localhost/shop.php?catalogue=manuscripts" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
+							<a href="shop.php?catalogue=manuscripts" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
 								Manuscripts
 							</a>
 						</div>
@@ -165,7 +165,7 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.php?product={$product0}" class="block2-name dis-block s-text3 p-b-5">
+										<a id="{$product0}" class="block2-name dis-block s-text3 p-b-5">
 											{$product0}
 										</a>
 
@@ -194,7 +194,7 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.php?product={$product1}" class="block2-name dis-block s-text3 p-b-5">
+										<a id="{$product1}" class="block2-name dis-block s-text3 p-b-5">
 											{$product1}
 										</a>
 
@@ -222,7 +222,7 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.php?product={$product2}" class="block2-name dis-block s-text3 p-b-5">
+										<a id="{$product2}" class="block2-name dis-block s-text3 p-b-5">
 											{$product2}
 										</a>
 
@@ -251,7 +251,7 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.php?product={$product3}" class="block2-name dis-block s-text3 p-b-5">
+										<a id="{$product3}" class="block2-name dis-block s-text3 p-b-5">
 											{$product3}
 										</a>
 
@@ -284,7 +284,7 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.php?product={$saleproduct0}" class="block2-name dis-block s-text3 p-b-5">
+										<a id="{$saleproduct0}" class="block2-name dis-block s-text3 p-b-5">
 											{$saleproduct0}
 										</a>
 
@@ -316,7 +316,7 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.php?product={$saleproduct1}" class="block2-name dis-block s-text3 p-b-5">
+										<a id="{$saleproduct1}" class="block2-name dis-block s-text3 p-b-5">
 											{$saleproduct1}
 										</a>
 
@@ -348,7 +348,7 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.php?product={$saleproduct2}" class="block2-name dis-block s-text3 p-b-5">
+										<a id="{$saleproduct2}" class="block2-name dis-block s-text3 p-b-5">
 											{$saleproduct2}
 										</a>
 
@@ -380,7 +380,7 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.php?product={$saleproduct3}" class="block2-name dis-block s-text3 p-b-5">
+										<a id="{$saleproduct3}" class="block2-name dis-block s-text3 p-b-5">
 											{$saleproduct3}
 										</a>
 
