--- a/fashe-colorlib/shop.html
+++ b/fashe-colorlib/shop.html
@@ -128,7 +128,7 @@
 								<div class="block2-overlay trans-0-4">
 									<div class="block2-btn-addcart w-size1 trans-0-4">
 										<!-- Button -->
-										<button name="{$product[0]}" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+										<button id="{$product[0]}" name="{$product[0]}" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
 											Add to Cart
 										</button>
 									</div>
@@ -141,7 +141,7 @@
 								<div class="block2-overlay trans-0-4">
 									<div class="block2-btn-addcart w-size1 trans-0-4">
 										<!-- Button -->
-										<button name="{$product[0]}" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+										<button id="{$product[0]}" name="{$product[0]}" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
 											Add to Cart
 										</button>
 									</div>
@@ -149,7 +149,7 @@
 							</div>
 							{/if}
 							<div class="block2-txt p-t-20">
-								<a id="{$product[0]}" class="block2-name dis-block s-text3 p-b-5">
+								<a id="{$product[0]}" href="product-detail.php" class="block2-name dis-block s-text3 p-b-5">
 									{$product[0]}
 								</a>
 
