Revert "Update order-detail.html"
This reverts commit a45d39806640ce650ab1842dd7a1f3b72c55ca5d.

--- a/fashe-colorlib/order-detail.html
+++ b/fashe-colorlib/order-detail.html
@@ -80,7 +80,7 @@
 									</td>
 							
 									<td class="column-2">
-										<a id="{$product[0]}" href="product-detail.php">{$product[2]}x {$product[0]}<br></a>
+										<a href="product-detail.php?product={$product[0]}">{$product[2]}x {$product[0]}<br></a>
 										<p><span class="s-text8">{$product[3]}</span></p>
 										<p><span class="s-text8">{$product[4]}</span></p>
 									</td>
