Revert "Bug fixing"
This reverts commit 5e5197c5e15b4d933d8010165eacbec2f0386788.

--- a/fashe-colorlib/index.html
+++ b/fashe-colorlib/index.html
@@ -157,7 +157,7 @@
 										<div class="block2-overlay trans-0-4">
 											<div class="block2-btn-addcart w-size1 trans-0-4">
 												<!-- Button -->
-												<button id="{$product0}"class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+												<button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
 													Add to Cart
 												</button>
 											</div>
@@ -165,7 +165,7 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.php" id="{$product0}" class="block2-name dis-block s-text3 p-b-5">
+										<a id="{$product0}" class="block2-name dis-block s-text3 p-b-5">
 											{$product0}
 										</a>
 
@@ -186,7 +186,7 @@
 
 											<div class="block2-btn-addcart w-size1 trans-0-4">
 												<!-- Button -->
-												<button id="{$product1}" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+												<button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
 													Add to Cart
 												</button>
 											</div>
@@ -194,7 +194,7 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.php" id="{$product1}" class="block2-name dis-block s-text3 p-b-5">
+										<a id="{$product1}" class="block2-name dis-block s-text3 p-b-5">
 											{$product1}
 										</a>
 
@@ -214,7 +214,7 @@
 										<div class="block2-overlay trans-0-4">
 											<div class="block2-btn-addcart w-size1 trans-0-4">
 												<!-- Button -->
-												<button id="{$product2}" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+												<button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
 													Add to Cart
 												</button>
 											</div>
@@ -222,7 +222,7 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.php" id="{$product2}" class="block2-name dis-block s-text3 p-b-5">
+										<a id="{$product2}" class="block2-name dis-block s-text3 p-b-5">
 											{$product2}
 										</a>
 
@@ -243,7 +243,7 @@
 
 											<div class="block2-btn-addcart w-size1 trans-0-4">
 												<!-- Button -->
-												<button id="{$product3}" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+												<button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
 													Add to Cart
 												</button>
 											</div>
@@ -251,7 +251,7 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.php" id="{$product3}" class="block2-name dis-block s-text3 p-b-5">
+										<a id="{$product3}" class="block2-name dis-block s-text3 p-b-5">
 											{$product3}
 										</a>
 
@@ -276,7 +276,7 @@
 										<div class="block2-overlay trans-0-4">
 											<div class="block2-btn-addcart w-size1 trans-0-4">
 												<!-- Button -->
-												<button id="{$saleproduct0}" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+												<button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
 													Add to Cart
 												</button>
 											</div>
@@ -284,7 +284,7 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.php" id="{$saleproduct0}" class="block2-name dis-block s-text3 p-b-5">
+										<a id="{$saleproduct0}" class="block2-name dis-block s-text3 p-b-5">
 											{$saleproduct0}
 										</a>
 
@@ -308,7 +308,7 @@
 										<div class="block2-overlay trans-0-4">
 											<div class="block2-btn-addcart w-size1 trans-0-4">
 												<!-- Button -->
-												<button id="{$saleproduct1}" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+												<button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
 													Add to Cart
 												</button>
 											</div>
@@ -316,7 +316,7 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.php" id="{$saleproduct1}" class="block2-name dis-block s-text3 p-b-5">
+										<a id="{$saleproduct1}" class="block2-name dis-block s-text3 p-b-5">
 											{$saleproduct1}
 										</a>
 
@@ -340,7 +340,7 @@
 										<div class="block2-overlay trans-0-4">
 											<div class="block2-btn-addcart w-size1 trans-0-4">
 												<!-- Button -->
-												<button id="{$saleproduct2}" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+												<button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
 													Add to Cart
 												</button>
 											</div>
@@ -348,7 +348,7 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.php" id="{$saleproduct2}" class="block2-name dis-block s-text3 p-b-5">
+										<a id="{$saleproduct2}" class="block2-name dis-block s-text3 p-b-5">
 											{$saleproduct2}
 										</a>
 
@@ -372,7 +372,7 @@
 										<div class="block2-overlay trans-0-4">
 											<div class="block2-btn-addcart w-size1 trans-0-4">
 												<!-- Button -->
-												<button id="{$saleproduct3}" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+												<button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
 													Add to Cart
 												</button>
 											</div>
@@ -380,7 +380,7 @@
 									</div>
 
 									<div class="block2-txt p-t-20">
-										<a href="product-detail.php" id="{$saleproduct3}" class="block2-name dis-block s-text3 p-b-5">
+										<a id="{$saleproduct3}" class="block2-name dis-block s-text3 p-b-5">
 											{$saleproduct3}
 										</a>
 
