--- a/fashe-colorlib/shop.html
+++ b/fashe-colorlib/shop.html
@@ -149,7 +149,7 @@
 							</div>
 							{/if}
 							<div class="block2-txt p-t-20">
-								<a id="{$product[0]}" class="block2-name dis-block s-text3 p-b-5">
+								<a href="product-detail.php?product={$product[0]}" class="block2-name dis-block s-text3 p-b-5">
 									{$product[0]}
 								</a>
 
