--- a/fashe-colorlib/cart.html
+++ b/fashe-colorlib/cart.html
@@ -30,7 +30,7 @@
 								</div>
 							</td>
 							<td class="column-2">
-								<a href="product-detail.php" id="{$product[0]}">{$product[0]}<br>
+								<a href="product-detail.php?product={$product[0]}">{$product[0]}<br>
 								</a>
 								<p><span class="s-text8">{$product[5]}</span></p>
 								<p><span class="s-text8">{$product[6]}</span></p>
