--- a/fashe-colorlib/shop.html
+++ b/fashe-colorlib/shop.html
@@ -106,12 +106,11 @@
 					</div>
 
 					<span class="s-text8 p-t-5 p-b-5">
-							Showing {$prd} of {$total_prd} results
+							Showing {$init}-{$prd} of {$total_prd} results
 					</span>
 				</div>
 
 				<!-- Product -->
-				<!-- NEED JS Function to show results after 12 (remove hidden attribute and update span value -->
 				<div class="row">
 					{foreach item=product from=$products}
 					{if $product@iteration > 12}
@@ -170,6 +169,17 @@
 					</div>
 					{/foreach}
 				</div>
+				{if $last > 1}
+				<nav aria-label="Page navigation example">
+					<ul class="pagination">
+						<li class="page-item"><a class="page-link" href="shop.php?page=1">First</a></li>
+						{for $i=$page to $last max=5}  
+						<li class="page-item"><a class="page-link" href="shop.php?page={$i}">{$i}</a></li>
+						{/for}
+						<li class="page-item"><a class="page-link" href="shop.php?page={$last}">Last</a></li>
+					</ul>
+				</nav>
+				{/if}
 			</div>
 		</div>
 	</div>
