Removed unnecessary links

--- a/fashe-colorlib/index.html
+++ b/fashe-colorlib/index.html
@@ -188,7 +188,7 @@
 											<div class="block2-btn-addcart w-size1 trans-0-4">
                                                 <!-- Button -->
                                                 <a href="product-detail.php?product={$product1}">
-												    <button href="product-detail.php?product={$product1}" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+												    <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
 													   Add to Cart
 												    </button>
                                                 </a>
@@ -218,7 +218,7 @@
 											<div class="block2-btn-addcart w-size1 trans-0-4">
                                                 <!-- Button -->
                                                 <a href="product-detail.php?product={$product2}">
-												    <button href="product-detail.php?product={$product2}" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+												    <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
 													   Add to Cart
 												    </button>
                                                 </a>
@@ -249,7 +249,7 @@
 											<div class="block2-btn-addcart w-size1 trans-0-4">
 												<!-- Button -->
                                                 <a href="product-detail.php?product={$product3}">
-												    <button href="product-detail.php?product={$product3}" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+												    <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
 													   Add to Cart
 												    </button>
                                                 </a>
