Icon number change script added

--- a/fashe-colorlib/header.html
+++ b/fashe-colorlib/header.html
@@ -97,7 +97,7 @@
 							<a href="cart.php" class="header-wrapicon1 dis-block">
 								<img src="images/icons/icon-header-02.png" class="header-icon1 js-show-header-dropdown" alt="ICON">
 							</a>
-							<span class="header-icons-noti">{$items}</span>
+							<span class="header-icons-noti" id="item-number">{$items}</span>
 						</div>
 					</div>
 				</div>
