--- a/fashe-colorlib/product-detail.html
+++ b/fashe-colorlib/product-detail.html
@@ -78,7 +78,7 @@
 						</div>
 
 						<div class="rs2-select2 rs3-select2 bo4 of-hidden w-size16">
-							<select class="selection-2" name="size">
+							<select class="selection-2" name="size" id="size">
 								{foreach item=size from=$sizes}
 								<option>{$size[0]}</option>
 								{/foreach}
@@ -93,7 +93,7 @@
 						</div>
 
 						<div class="rs2-select2 rs3-select2 bo4 of-hidden w-size16">
-							<select class="selection-2" name="color">
+							<select class="selection-2" name="color" id="color">
 								{foreach item=color from=$colors}
 								<option>{$color[0]}</option>
 								{/foreach}
@@ -118,7 +118,7 @@
 							<div class="btn-addcart-product-detail size9 trans-0-4 m-t-10 m-b-10">
 								<!-- Button --> 
 								<!-- AJAX here --> 
-								<button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
+								<button onclick="addProduct()"class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
 									Add to Cart
 								</button>
 							</div>
@@ -236,8 +236,42 @@
 	<div id="dropDownSelect1"></div>
 	<div id="dropDownSelect2"></div>
 
+<!--===============================================================================================-->
+<!-- Adds the product shown in the page, in the chosen quantity, size and color to the user's cart -->
+<script type="text/javascript">
+    function addProduct(){
+        //retrieve product info
+        var name = sanitizeString($(".product-detail-name").text());
+        var quantity = $(".num-product").val();
+        var color = sanitizeString($("#color").val());
+        var size = sanitizeString($("#size").val());
+        //AJAX request
+        $.post("addToCart.php", {
+            product: name,
+            quantity: quantity,
+            color: color,
+            size: size
+        }, function (data){
+            //Update icon number if needed
+            if(data == 0){
+                var number = parseInt($("#item-number").text())+1;
+                $(".header-icons-noti").text(number);
+            }
+            //confirmation message
+            swal(name, "is added to cart !", "success");
+        })
+    }
 
+</script>
 
+<!--===============================================================================================-->
+<!-- String Sanitize Function -->
+<script type="text/javascript">
+    function sanitizeString(str){
+        str = str.replace(/[^a-z0-9áéíóúñü \.,_-]/gim,"");
+        return str.trim();
+    }
+</script>
 <!--===============================================================================================-->
 	<script type="text/javascript" src="vendor/jquery/jquery-3.2.1.min.js"></script>
 <!--===============================================================================================-->
