--- a/fashe-colorlib/product-detail.html
+++ b/fashe-colorlib/product-detail.html
@@ -29,25 +29,18 @@
 				<div class="wrap-slick3 flex-sb flex-w">
 					<div class="wrap-slick3-dots"></div>
 
+					{foreach item=img from=$images name=loop}
 					<div class="slick3">
-						<div class="item-slick3" data-thumb="images/thumb-item-01.jpg">
+						<div class="item-slick3" data-thumb="{$img[0]}">
 							<div class="wrap-pic-w">
-								<img src="images/product-detail-01.jpg" alt="IMG-PRODUCT">
-							</div>
-						</div>
-
-						<div class="item-slick3" data-thumb="images/thumb-item-02.jpg">
-							<div class="wrap-pic-w">
-								<img src="images/product-detail-02.jpg" alt="IMG-PRODUCT">
-							</div>
-						</div>
-
-						<div class="item-slick3" data-thumb="images/thumb-item-03.jpg">
-							<div class="wrap-pic-w">
-								<img src="images/product-detail-03.jpg" alt="IMG-PRODUCT">
+								<img src="{$img[0]}" alt="IMG-PRODUCT">
 							</div>
 						</div>
 					</div>
+						{if $smarty.foreach.loop.index == 4}
+							{break}
+						{/if}
+					{/foreach}
 				</div>
 			</div>
 
