--- a/fashe-colorlib/index.html
+++ b/fashe-colorlib/index.html
@@ -283,9 +283,11 @@
 										<div class="block2-overlay trans-0-4">
 											<div class="block2-btn-addcart w-size1 trans-0-4">
 												<!-- Button -->
-												<button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-													Add to Cart
-												</button>
+                                                <a href="product-detail.php?product={$saleproduct0}">
+												    <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+													   Add to Cart
+												    </button>
+                                                </a>
 											</div>
 										</div>
 									</div>
@@ -315,9 +317,11 @@
 										<div class="block2-overlay trans-0-4">
 											<div class="block2-btn-addcart w-size1 trans-0-4">
 												<!-- Button -->
-												<button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-													Add to Cart
-												</button>
+												<a href="product-detail.php?product={$saleproduct1}">
+                                                    <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+													   Add to Cart
+												    </button>
+                                                </a>
 											</div>
 										</div>
 									</div>
@@ -347,9 +351,11 @@
 										<div class="block2-overlay trans-0-4">
 											<div class="block2-btn-addcart w-size1 trans-0-4">
 												<!-- Button -->
-												<button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-													Add to Cart
-												</button>
+                                                <a href="product-detail.php?product={$saleproduct2}">
+												    <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+													   Add to Cart
+												    </button>
+                                                </a>
 											</div>
 										</div>
 									</div>
@@ -379,9 +385,11 @@
 										<div class="block2-overlay trans-0-4">
 											<div class="block2-btn-addcart w-size1 trans-0-4">
 												<!-- Button -->
-												<button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-													Add to Cart
-												</button>
+                                                <a href="product-detail.php?product={$saleproduct3}">
+												    <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+													   Add to Cart
+												    </button>
+                                                </a>
 											</div>
 										</div>
 									</div>
