--- a/fashe-colorlib/shop.html
+++ b/fashe-colorlib/shop.html
@@ -127,9 +127,11 @@
 								<div class="block2-overlay trans-0-4">
 									<div class="block2-btn-addcart w-size1 trans-0-4">
 										<!-- Button -->
-										<button name="{$product[0]}" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-											Add to Cart
-										</button>
+                                        <a href="product-detail.php?product={$product[0]}">
+										  <button name="{$product[0]}" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+											 Add to Cart
+										  </button>
+                                        </a>
 									</div>
 								</div>
 							</div>
@@ -140,9 +142,11 @@
 								<div class="block2-overlay trans-0-4">
 									<div class="block2-btn-addcart w-size1 trans-0-4">
 										<!-- Button -->
-										<button name="{$product[0]}" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-											Add to Cart
-										</button>
+                                        <a href="product-detail.php?product={$product[0]}">
+										  <button name="{$product[0]}" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+											 Add to Cart
+										  </button>
+                                        </a>
 									</div>
 								</div>
 							</div>
