--- a/fashe-colorlib/checkOut.html
+++ b/fashe-colorlib/checkOut.html
@@ -58,7 +58,7 @@
 							</div>
 						</div>
 						<div class="card-body text-center">
-							<input type="button" class="btn" value="Confirm Order">
+							<input type="submit" class="btn" value="Confirm Order">
 						</div>
 					</form>
 				</div>
