--- a/fashe-colorlib/order-detail.html
+++ b/fashe-colorlib/order-detail.html
@@ -57,6 +57,8 @@
 						</div>
 						<div class="card-body">
 							<p class="card-text">Dispatched to: {$addname} in {$address}</p>
+							<p class="card-text">Courier: {$courier}</p>
+							<p class="card-text">Shipping status: {$shipStatus}</p>
 							<p class="card-text">Payed by: {$payname} with {$card}</p>
 							<p class="card-text">Payment status: {$status}</p>
 						</div>
