--- a/fashe-colorlib/checkOut.html
+++ b/fashe-colorlib/checkOut.html
@@ -57,7 +57,7 @@
 								<div class="rs2-select2 rs3-select2 bo4 of-hidden w-size16">
 									<select class="selection-2" name="courier">
 										{foreach item=option from=$deloptions}
-										<option value="{$option[0]}">{$option[1]} €{$option[2]}</option>
+										<option value="{$option[0]}">{$option[0]} €{$option[1]}</option>
 										{/foreach}
 									</select>
 								</div>
@@ -74,7 +74,7 @@
 						<h5 class="m-text20 p-b-24">Order Total</h5>
 						<div class="flex-w flex-sb-m p-t-26 p-b-30">
 							<span class="m-text22 w-size19 w-full-sm">Total:</span>
-							<span class="m-text21 w-size20 w-full-sm">€ jquery</span>
+							<span class="m-text21 w-size20 w-full-sm">€ {$total}</span>
 						</div>
 					</div>
 				</div>
