--- a/fashe-colorlib/checkOut.html
+++ b/fashe-colorlib/checkOut.html
@@ -12,7 +12,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-8">
-					<form method="POST" action="checkout.php">
+					<form method="POST" onsubmit="order()" action="checkOut.php" id="data-form">
 						<div class="card w-100">
 							<div class="card-header">
 								Select a delivery address
@@ -74,7 +74,7 @@
 						<h5 class="m-text20 p-b-24">Order Total</h5>
 						<div class="flex-w flex-sb-m p-t-26 p-b-30">
 							<span class="m-text22 w-size19 w-full-sm">Total:</span>
-							<span class="m-text21 w-size20 w-full-sm">€ {$total}</span>
+							<span class="m-text21 w-size20 w-full-sm" id="total-price">€ {$total}</span>
 						</div>
 					</div>
 				</div>
@@ -95,7 +95,17 @@
 	<div id="dropDownSelect1"></div>
 	<div id="dropDownSelect2"></div>
 
-
+<script type="text/javascript">
+    function order(){
+        var total = $("#total-price").text().slice(2);
+        var form = $("#data-form").get();
+        $('<input />').attr('type', 'hidden')
+          .attr("name", "total")
+          .attr('value', total)
+          .appendTo('#data-form');
+        form.submit();
+    }
+</script>
 
 <!--===============================================================================================-->
 	<script type="text/javascript" src="vendor/jquery/jquery-3.2.1.min.js"></script>
