--- a/fashe-colorlib/cart.html
+++ b/fashe-colorlib/cart.html
@@ -26,7 +26,7 @@
 						<tr class="table-row" id = "{$product[7]}">
 							<td class="column-1">
 								<div class="cart-img-product b-rad-4 o-f-hidden">
-									<a href="cart.php" id="{$product[0]}"><img src="{$product[2]}" alt="IMG-PRODUCT"></a>
+									<a id="{$product[0]}"><img src="{$product[2]}" alt="IMG-PRODUCT"></a>
 								</div>
 							</td>
 							<td class="column-2">
@@ -65,7 +65,7 @@
 				<div class="size10 trans-0-4 m-t-10 m-b-10">
 					<!-- Button -->
 					<!-- NEED AJAX HERE -->
-					<button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
+					<button onclick="update()" class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
 						Update Cart
 					</button>
 				</div>
@@ -109,7 +109,8 @@
 	<div id="dropDownSelect1"></div>
 	<div id="dropDownSelect2"></div>
 
-
+<!--===============================================================================================-->
+    <script type="text/javascript" src="vendor/sweetalert/sweetalert.min.js"></script>
 <!--===============================================================================================-->
 	<script type="text/javascript" src="vendor/jquery/jquery-3.2.1.min.js"></script>
 <!--===============================================================================================-->
@@ -133,10 +134,36 @@
 <!--===============================================================================================-->
 	<script src="js/main.js"></script>
 <!--===============================================================================================-->
+<!-- Update Cart Request -->
+<script type="text/javascript">
+    function update(){
+        var count = $(".table-row").length;
+        var quantityArr = new Array(count);
+        //for loop populates array with product quantities
+        for (i = 0; i < count; i++){
+            quantityArr[i] = parseInt($(".table-row#"+i).find(".num-product").val());
+        }
+        //submit post form with the resulting array and the update flag set
+        $.post("cart.php",{
+            quantities: quantityArr,
+            update: "true"
+        }, function(){
+            swal("Cart Updated!", "", "success").then(function(){
+                location.reload();
+            });
+        });
+    }
+
+
+</script>
+
+<!--===============================================================================================-->
 <!-- Checkout Request -->
 <script type="text/javascript">
     function checkout(){
+        //retrieve total price
         var total = $("#total-price").text().slice(2);
+        //create and submit form with new element
         var form = document.createElement("form");
         var element = document.createElement("input");
         element.value= total;
