--- a/fashe-colorlib/payments.html
+++ b/fashe-colorlib/payments.html
@@ -68,7 +68,7 @@
 						<p class="card-text">{$payment[3]}</p>
 						<p class="card-text">{$payment[4]}</p>
 						<div class="text-center">
-							<a href="payments.php?delete={$payment[0]}" class="btn btn-outline-dark">Delete</a>
+							<a href="" onclick="delet()" class="btn btn-outline-dark">Delete</a>
 						</div>
 					</div>
 				</div>
@@ -159,6 +159,15 @@
 </script>
 <!--===============================================================================================-->
 <script src="js/main.js"></script>
+<!--===============================================================================================-->
+<!-- Payment Delete function -->
+<script type="text/javascript">
+    function delet(){
+        $.get("payments.php?delete={$payment[0]}", function() {
+                location.reload();
+            });     
+    }
+</script>
 
 </body>
 </html>
