change buttons class

--- a/fashe-colorlib/addresses.html
+++ b/fashe-colorlib/addresses.html
@@ -57,7 +57,7 @@
 			<div class="col-sm-6 col-md-8 col-lg-9 p-b-50">
 				<div class="card w-100">
 					<div class="card-body text-center">
-						<a href="add-address.php" class="btn btn-outline-dark">Add new address</a>
+						<a href="add-address.php" class="btn s-text1 bg1 hov1 bo-rad-23 m-r-0">Add new address</a>
 					</div>
 				</div>
 				<br>
@@ -70,7 +70,7 @@
 						<p class="card-text">{$address[5]}, {$address[6]} {$address[7]}</p>
 						<p class="card-text">{$address[8]}</p>
 						<div class="text-center">
-							<a href="" onclick="delet()" class="btn btn-outline-dark">Delete</a>
+							<a href="" onclick="delet()" class="btn s-text1 bg1 hov1 bo-rad-23 m-r-0">Delete</a>
 						</div>
 					</div>
 				</div>
