--- a/fashe-colorlib/checkOut.html
+++ b/fashe-colorlib/checkOut.html
@@ -73,9 +73,11 @@
 							<span class="m-text21 w-size20 w-full-sm" id="total-price">€ {$total}</span>
 						</div>
 					</div>
-                    <button onclick="order()" class="bo9 w-size18 p-l-40 p-r-40 p-t-30 p-b-38 m-t-30 hov1 m-r-0 m-l-auto p-lr-15-sm">
+					<div class="text-center">
+                    <button onclick="order()" class="btn s-text1 bg1 m-t-30 hov1 bo-rad-23 m-r-0">
                         Confirm Order
-                    </button>
+					</button>
+					</div>
 				</div>
 			</div>
 		</div>
