--- a/fashe-colorlib/payments.html
+++ b/fashe-colorlib/payments.html
@@ -57,7 +57,7 @@
 			<div class="col-sm-6 col-md-8 col-lg-9 p-b-50">
 				<div class="card w-100">
 					<div class="card-body text-center">
-						<a href="add-payment.php" class="btn btn-outline-dark">Add new payment method</a>
+						<a href="add-payment.php" class="btn s-text1 bg1 hov1 bo-rad-23 m-r-0">Add new payment method</a>
 					</div>
 				</div>
 				{foreach item=payment from=$payments}
@@ -68,7 +68,7 @@
 						<p class="card-text">{$payment[3]}</p>
 						<p class="card-text">{$payment[4]}</p>
 						<div class="text-center">
-							<a href="" onclick="delet()" class="btn btn-outline-dark">Delete</a>
+							<a href="" onclick="delet()" class="btn s-text1 bg1 hov1 bo-rad-23 m-r-0">Delete</a>
 						</div>
 					</div>
 				</div>
