--- a/fashe-colorlib/user-panel.html
+++ b/fashe-colorlib/user-panel.html
@@ -59,7 +59,7 @@
 					<div class="card-body">
 						<h5 class="card-title">Username:</h5>
 						<div class="text-right">
-							<a href="edit-username.php" class="btn btn-outline-dark">Change</a>
+							<a href="edit-username.php" class="btn s-text1 bg1 hov1 bo-rad-23 m-r-0">Change</a>
 						</div>
 						<h6 class="card-text">{$username}</h6>
 					</div>
@@ -68,7 +68,7 @@
 					<div class="card-body">
 						<h5 class="card-title">Email:</h5>
 						<div class="text-right">
-							<a href="edit-mail.php" class="btn btn-outline-dark">Change</a>
+							<a href="edit-mail.php" class="btn s-text1 bg1 hov1 bo-rad-23 m-r-0">Change</a>
 						</div>
 						<h6 class="card-text">{$mail}</h6>
 					</div>
@@ -77,7 +77,7 @@
 					<div class="card-body">
 						<h5 class="card-title">Password:</h5>
 						<div class="text-right">
-							<a href="edit-password.php" class="btn btn-outline-dark">Change</a>
+							<a href="edit-password.php" class="btn s-text1 bg1 hov1 bo-rad-23 m-r-0">Change</a>
 						</div>
 						<h6 class="card-text">*********</h6>
 					</div>
